--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,4 +8,5 @@
     <p class="lead">KYGM Services Client Tracking</p>
   </h1>
   <p>tst</p>
+  <p>git push https://github.com/kygm/WebApp.git</p>
 </div>
