--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -16,10 +16,12 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
-          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenu">Song List</a>
+          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenu">Actions</a>
           <div class="dropdown-menu">
-            <a href="/songs" class="dropdown-item">View Songs</a>
-            <a href="/songs/add" class="dropdown-item">Add a Song</a>
+            <a href="/clients" class="dropdown-item">View Clients</a>
+            <a href="/clients" class="dropdown-item">Add Clients</a>
+            <a href="/clients/addTransact" class="dropdown-item">Add Transaction</a>
+            <a href="/clients/viewTransact" class="dropdown-item">View Transaction</a>
           </div>
         </li>
       </ul>
