--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -18,8 +18,8 @@
         <li class="nav-item dropdown">
           <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenu">Actions</a>
           <div class="dropdown-menu">
-            <a href="/clients" class="dropdown-item">View Clients</a>
-            <a href="/clients" class="dropdown-item">Add Clients</a>
+            <a href="/clients/viewClient" class="dropdown-item">View Clients</a>
+            <a href="/clients/addClient" class="dropdown-item">Add Clients</a>
             <a href="/clients/addTransact" class="dropdown-item">Add Transaction</a>
             <a href="/clients/viewTransact" class="dropdown-item">View Transaction</a>
           </div>
