--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,20 @@
+<style>
+  
+</style>
 <div class="jumbotron text-center">
   <h1 class="display-3">
     {{title}}
     <p class="lead">KYGM Services Client Tracking</p>
   </h1>
+</div>
+<div name="main">
+  <div name="one">
+    <button type="button" class="btn btn-secondary">One</button>
+  </div>
+  <div name="two">
+    <button type="button" class="btn btn-secondary">Two</button>
+  </div>
+  <div name="three">
+    <button type="button" class="btn btn-secondary">Three</button>
+  </div>
 </div>
