--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,10 +12,11 @@
     <button type="button" class="btn btn-secondary">One</button>
   </div>
   <div name="two">
-    <button type="button" class="btn btn-secondary">Two</button>
+    <button type="button" class="btn btn-secondary">Second</button>
   </div>
   <div name="three">
-    <button type="button" class="btn btn-secondary">Three</button>
+    <button type="button" class="btn btn-secondary">Third</button>
   </div>
 </div>
+
 
