--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,11 +12,12 @@
     <button type="button" class="btn btn-secondary">One</button>
   </div>
   <div name="two">
-    <button type="button" class="btn btn-secondary">Second</button>
+    <button type="button" class="btn btn-secondary">Sgit lecond</button>
   </div>
   <div name="three">
     <button type="button" class="btn btn-secondary">Third</button>
   </div>
+  <p>Enter 'git log' in terminal to view every commit in the
+    master branch
+  </p>
 </div>
-
-
