--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,15 +8,16 @@
   </h1>
 </div>
 <div name="main">
-  <div name="one">
-    <button type="button" class="btn btn-secondary">One</button>
+  <div name="View Clients">
+    <a class="btn btn-secondary btn-block"href="/clients/viewClient">View Clients</a>
   </div>
-  <div name="two">
-    <button type="button" class="btn btn-secondary">Two</button>
+  <div name="Add Clients">
+    <a class="btn btn-secondary btn-block"href="/clients/addClient">Add Clients</a>
   </div>
-  <div name="three">
-    <button type="button" class="btn btn-secondary">Three</button>
+  <div name="View Transactions">
+    <a class="btn btn-secondary btn-block"href="/clients/viewTransact">View Transactions</a>
+  </div>
+  <div name="Add Transactions">
+    <a class="btn btn-secondary btn-block"href="/clients/addTransact">Add Transactions</a>
   </div>
 </div>
-
-<p>Test by kenny 23:00</p>
