--- a/views/clients/addClient.handlebars
+++ b/views/clients/addClient.handlebars
@@ -1,2 +1,135 @@
-<p>Page under construction...</p>
-<p>Add client page</p>
+  <h3 class="text-center">New Client Application Form</h3>
+  <form name="addClient"action="" method="post"class="form-inline">
+    <div class="form-group row">
+      <label for="fName"class="mx-sm-1">First Name</label>
+      <input type="text"class="form-control col-sm-2 mx-sm-2"name="fName"size="20">
+      <label for="mName">Middle Name</label>
+      <input type="text"class="form-control col-sm-2 mx-sm-2"name="mName"size="10">
+      <label for="lName">Last Name</label>
+      <input type="text" class="form-control  col-sm-2 mx-sm-2" name="lName">
+      <label for="alias">Alias</label>
+      <input type="text"class="form-control  col-sm-2 mx-sm-2"name="alias">
+    </div>
+    <div class="form-group row">
+      <label for="age"class="mx-sm-1">Age</label>
+      <input type="number" class="form-control col-sm-1 mx-sm-2" name="age"min="16"max="110">
+
+      <label for="dob" class="mx-sm-2">Date of Birth</label>
+      <input type="date"class="form-control col-sm-3 mx-sm-2"name="dob">
+
+      <label for="ssid" class="mx-sm-2">SSID</label>
+      <input type="text"class="form-control col-sm-1 mx-sm-1"name="ssid1"maxlength="3"minlength="3"
+      oninput="autotab(this, document.addClient.ssid1)"size="3">-
+      <input type="text"class="form-control col-sm-1 mx-sm-1"name="ssid2"maxlength="2"minlength="2"
+      oninput="autotab(this, document.addClient.ssid2)"size="2">-
+      <input type="text"class="form-control col-sm-2 mx-sm-1"name="ssid3"maxlength="4"minlength="4"
+      oninput="autotab(this, document.addClient.ssid3)"size="4">
+    </div>
+    <div class="form-group row">
+      <label for="address">Address</label>
+      <input type="text"class="form-control col-sm-2 mx-sm-1"name="address">
+
+      <label for="city">City</label>
+      <input type="text"class="form-control mx-sm-1"name="city">
+
+      <label for="state">State</label>
+        <select class="form-control mx-sm-1"name="state">
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            <option value="CA">California</option>
+            <option value="CO">Colorado</option>
+            <option value="CT">Connecticut</option>
+            <option value="DE">Delaware</option>
+            <option value="DC">District Of Columbia</option>
+            <option value="FL">Florida</option>
+            <option value="GA">Georgia</option>
+            <option value="HI">Hawaii</option>
+            <option value="ID">Idaho</option>
+            <option value="IL">Illinois</option>
+            <option value="IN">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentucky</option>
+            <option value="LA">Louisiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
+        </select>
+
+      <label for="zip">Zip</label>
+      <input type="number"class="form-control mx-sm-1"name="zip"maxlength="5"minlength="4"
+        oninput="autotab(this, document.addClient.zip)">
+    </div>
+    <div class="form-group row">
+        <label for="phoneNumber">Phone Number</label>
+      <input type="tel"class="form-control mx-sm-1"name="phoneNumber">
+
+      <label for="work">Work</label>
+      <input type="text"class="form-control mx-sm-1"name="work">
+
+      <label for="timeInUSA">Time In USA</label>
+      <input type="number"class="form-control mx-sm-1"name="timeInUSA">(YRS)     
+    </div>
+    <div class="form-group">
+      <label for="description">Description</label>
+      <textarea class="form-control col-sm-9 mx-sm-1"name="description"></textarea>
+    </div><br>
+    <div class="form-group row">
+      <label for="idPhoto">ID Photo</label>
+      <input type="file"class="form-control col-sm-9 mx-sm-1"name="idPhoto">
+    </div>
+    <div class="form-group mb-4 mx-sm-1">
+      <label for="passportPhoto">Passport Photo</label>
+      <input type="file"class="form-control mx-sm-1"name="passportPhoto">
+    </div>
+    <div class="form-group mb-4 mx-sm-1">
+      <label for="birthCertPhoto">Birth Certificate Photo</label>
+      <input type="file"class="form-control mx-sm-1"name="birthCertPhoto">
+    </div>
+    <button type="submit"class="btn btn-primary btn-block">Submit New Client</button>
+  </form>
+
+<script>
+function autotab(current,to){    if(current.getAttribute && current.value.length==current.getAttribute("maxlength")) {    to.focus()    }   }
+</script>
+
+  {{!-- <form>
+    <table>
+        <tr><th>New Client Application Form</th></tr>
+        <tr>
+            <td>First Name:</td>
+            <td><input type</td>
+        </tr>
+    </table>
+</form> --}}
