--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,4 +1,4 @@
 <h1>About this web app</h1>
 <p>This is a web app that was created to keep track of <br />
   all of KYGM Services's clients. Project started 1/11/21</p>
-<p>Created by Kevin Gutierrez and Kenny Rugemier</p>
+<p>Created by Kevin Gutierrez and Kenny Ruegemer</p>
