--- a/views/clients/addClient.handlebars
+++ b/views/clients/addClient.handlebars
@@ -1,40 +1,40 @@
-<<<<<<< HEAD
+  <div class="card card-body">
   <h3 class="text-center">New Client Application Form</h3>
-  <form name="addClient"action="" method="post"class="form-inline">
-    <div class="form-group row">
-      <label for="fName"class="mx-sm-1">First Name</label>
-      <input type="text"class="form-control col-sm-2 mx-sm-2"name="fName"size="20">
-      <label for="mName">Middle Name</label>
-      <input type="text"class="form-control col-sm-2 mx-sm-2"name="mName"size="10">
-      <label for="lName">Last Name</label>
-      <input type="text" class="form-control  col-sm-2 mx-sm-2" name="lName">
-      <label for="alias">Alias</label>
-      <input type="text"class="form-control  col-sm-2 mx-sm-2"name="alias">
+  <form name="addClient"action='add_client.php'method="post"class="form-inline">
+    <div class="form row my-2">
+      <label for="fName"class="mx-sm-2 my-2">First Name</label>
+      <input type="text"class="form-control col-auto"name="fName"size="18"required>
+      <label for="mName"class="col-auto my-2">Middle Name</label>
+      <input type="text"class="form-control col-auto"name="mName"size="10">
+      <label for="lName"class="col-auto">Last Name</label>
+      <input type="text" class="form-control col-auto" name="lName"required>
+      <label for="alias"class="col-auto">Alias</label>
+      <input type="text"class="form-control col-auto"name="alias"size='13'>
     </div>
-    <div class="form-group row">
-      <label for="age"class="mx-sm-1">Age</label>
-      <input type="number" class="form-control col-sm-1 mx-sm-2" name="age"min="16"max="110">
-
-      <label for="dob" class="mx-sm-2">Date of Birth</label>
-      <input type="date"class="form-control col-sm-3 mx-sm-2"name="dob">
-
-      <label for="ssid" class="mx-sm-2">SSID</label>
-      <input type="text"class="form-control col-sm-1 mx-sm-1"name="ssid1"maxlength="3"minlength="3"
+    
+    <div class="form row my-2 align-items-center">
+      <label for="age"class="mx-sm-2">Age</label>
+      <input type="number" class="form-control col-auto" name="age"min="16"max="110">
+      <label for="dob" class="col-auto">Date of Birth</label>
+      <input type="date"class="form-control col-auto"name="dob">
+      <label for="phoneNumber" class="col-auto">Phone Number</label>
+      <input type="tel"class="form-control mx-sm-1"name="phoneNumber"maxlength="10"size="11"
+      oninput="autotab(this, document.addClient.phoneNumber)"size="3">
+      <label for="ssid" class="col-auto">SSID</label>
+      <input type="text"class="form-control col-auto"name="ssid1"maxlength="3"minlength="3"
       oninput="autotab(this, document.addClient.ssid1)"size="3">-
-      <input type="text"class="form-control col-sm-1 mx-sm-1"name="ssid2"maxlength="2"minlength="2"
+      <input type="text"class="form-control col-auto"name="ssid2"maxlength="2"minlength="2"
       oninput="autotab(this, document.addClient.ssid2)"size="2">-
-      <input type="text"class="form-control col-sm-2 mx-sm-1"name="ssid3"maxlength="4"minlength="4"
+      <input type="text"class="form-control col-auto"name="ssid3"maxlength="4"minlength="4"
       oninput="autotab(this, document.addClient.ssid3)"size="4">
     </div>
-    <div class="form-group row">
-      <label for="address">Address</label>
-      <input type="text"class="form-control col-sm-2 mx-sm-1"name="address">
-
-      <label for="city">City</label>
-      <input type="text"class="form-control mx-sm-1"name="city">
-
-      <label for="state">State</label>
-        <select class="form-control mx-sm-1"name="state">
+    <div class="form-group row my-2">
+      <label for="address" class="mx-sm-2">Address</label>
+      <input type="text"class="form-control col-auto"name="address"size="36">
+      <label for="city" class="col-auto">City</label>
+      <input type="text"class="form-control col-auto"name="city">
+      <label for="state" class="col-auto">State</label>
+      <select class="form-control col-auto"name="state">
             <option value="AL">Alabama</option>
             <option value="AK">Alaska</option>
             <option value="AZ">Arizona</option>
@@ -86,41 +86,24 @@
             <option value="WV">West Virginia</option>
             <option value="WI">Wisconsin</option>
             <option value="WY">Wyoming</option>
-        </select>
-
-      <label for="zip">Zip</label>
-      <input type="number"class="form-control mx-sm-1"name="zip"maxlength="5"minlength="4"
+      </select>
+      <label for="zip" class="col-auto">Zip</label>
+      <input type="text"class="form-control col-auto"name="zip"maxlength="5"size="6"
         oninput="autotab(this, document.addClient.zip)">
     </div>
-    <div class="form-group row">
-        <label for="phoneNumber">Phone Number</label>
-      <input type="tel"class="form-control mx-sm-1"name="phoneNumber">
+    <div class="form row my-2 align-items-center">
+      <label for="work"class="mx-sm-2">Work</label>
+      <input type="text"class="form-control  col-auto"name="work">
+      <label for="timeInUSA"class="col-auto">Time In USA</label>
+      <input type="number"class="form-control col-auto"name="timeInUSA"min='0'>     
+      <label for="clientDescription"class="col-auto">Description</label>
+      <textarea class="form-control col-auto"name="clientDescription"></textarea>
+    </div>
 
-      <label for="work">Work</label>
-      <input type="text"class="form-control mx-sm-1"name="work">
-
-      <label for="timeInUSA">Time In USA</label>
-      <input type="number"class="form-control mx-sm-1"name="timeInUSA">(YRS)     
-    </div>
-    <div class="form-group">
-      <label for="description">Description</label>
-      <textarea class="form-control col-sm-9 mx-sm-1"name="description"></textarea>
-    </div><br>
-    <div class="form-group row">
-      <label for="idPhoto">ID Photo</label>
-      <input type="file"class="form-control col-sm-9 mx-sm-1"name="idPhoto">
-    </div>
-    <div class="form-group mb-4 mx-sm-1">
-      <label for="passportPhoto">Passport Photo</label>
-      <input type="file"class="form-control mx-sm-1"name="passportPhoto">
-    </div>
-    <div class="form-group mb-4 mx-sm-1">
-      <label for="birthCertPhoto">Birth Certificate Photo</label>
-      <input type="file"class="form-control mx-sm-1"name="birthCertPhoto">
     </div>
     <button type="submit"class="btn btn-primary btn-block">Submit New Client</button>
   </form>
-
+</div>
 <script>
 function autotab(current,to){    if(current.getAttribute && current.value.length==current.getAttribute("maxlength")) {    to.focus()    }   }
 </script>
@@ -134,95 +117,3 @@ function autotab(current,to){    if(current.getAttribute && current.value.length
         </tr>
     </table>
 </form> --}}
-=======
-{{!-- <h3>Enter the following information <br /> to create a new client</h3>
-
-<table border=0>
-  <form action='add_client.php' method='post'>
-    <tr>
-      <th bgcolor="blue">First Name</th>
-      <td><input type='text' name='fname' /></td>
-    </tr>
-    <tr>
-      <th bgcolor="blue">Last Name</th>
-      <td><input type='text' name='lname' /></td>
-    </tr>
-    <tr>
-      <th bgcolor="blue">Phone</th>
-      <td><input type='text' name='phone' /></td>
-    </tr>
-    <th bgcolor="blue">City</th>
-    <td><input type='text' name='city' /></td>
-    </tr>
-    <th bgcolor="blue">State</th>
-    <td><select name="state">
-        <option value="AL">Alabama</option>
-        <option value="AK">Alaska</option>
-        <option value="AZ">Arizona</option>
-        <option value="AR">Arkansas</option>
-        <option value="CA">California</option>
-        <option value="CO">Colorado</option>
-        <option value="CT">Connecticut</option>
-        <option value="DE">Delaware</option>
-        <option value="DC">District Of Columbia</option>
-        <option value="FL">Florida</option>
-        <option value="GA">Georgia</option>
-        <option value="HI">Hawaii</option>
-        <option value="ID">Idaho</option>
-        <option value="IL">Illinois</option>
-        <option value="IN">Indiana</option>
-        <option value="IA">Iowa</option>
-        <option value="KS">Kansas</option>
-        <option value="KY">Kentucky</option>
-        <option value="LA">Louisiana</option>
-        <option value="ME">Maine</option>
-        <option value="MD">Maryland</option>
-        <option value="MA">Massachusetts</option>
-        <option value="MI">Michigan</option>
-        <option value="MN">Minnesota</option>
-        <option value="MS">Mississippi</option>
-        <option value="MO">Missouri</option>
-        <option value="MT">Montana</option>
-        <option value="NE">Nebraska</option>
-        <option value="NV">Nevada</option>
-        <option value="NH">New Hampshire</option>
-        <option value="NJ">New Jersey</option>
-        <option value="NM">New Mexico</option>
-        <option value="NY">New York</option>
-        <option value="NC">North Carolina</option>
-        <option value="ND">North Dakota</option>
-        <option value="OH">Ohio</option>
-        <option value="OK">Oklahoma</option>
-        <option value="OR">Oregon</option>
-        <option value="PA">Pennsylvania</option>
-        <option value="RI">Rhode Island</option>
-        <option value="SC">South Carolina</option>
-        <option value="SD">South Dakota</option>
-        <option value="TN">Tennessee</option>
-        <option value="TX">Texas</option>
-        <option value="UT">Utah</option>
-        <option value="VT">Vermont</option>
-        <option value="VA">Virginia</option>
-        <option value="WA">Washington</option>
-        <option value="WV">West Virginia</option>
-        <option value="WI">Wisconsin</option>
-        <option value="WY">Wyoming</option>
-      </select> </td>
-    </tr>
-    <th bgcolor="blue">Address</th>
-    <td><input type='text' name='address' /></td>
-    </tr>
-    <th bgcolor="blue">Email</th>
-    <td><input type='text' name='email' /></td>
-    </tr>
-    <th bgcolor="blue">Birthday</th>
-    <td><input type='text' name='bday' /></td>
-    </tr>
-    <th bgcolor="blue">Description</th>
-    <td><textarea name='desc'></textarea></td>
-    </tr>
-    <tr>
-      <td><input type='submit' value='Add Client' /></td>
-  </form>
-  </div> --}}
->>>>>>> 5c41cd2b76db164c2b5c176127eb0393aa1b13c9
