--- a/views/clients/addTransact.handlebars
+++ b/views/clients/addTransact.handlebars
@@ -1,37 +1,40 @@
-<table>
-    <tr><th>New Transaction Form</th></tr>
-    <tr>
+
+    <div class='card card-body'>
+        <h3 class="text-center">New Transaction Form</h3>
         <form name="addTransaction"action="" method="post"class=""></form>
-        <td><div class="form-group"><label for="title"class="mx-sm-1">Title</label></td>
-        <td><input type='text' class=''name='title'></div></td>
-        <td><div class="form-group"><label for="date"class="mx-sm-1">Date</label></td>
-        <td><input type='date' class=''name='date'></div></td>
-        <td><div class="form-group"><label for="clientId"class="mx-sm-1">Client ID</label></td>
-        <td><input type='text' class=''name='clientId'></div></td>
-        <td><div class="form-group"><label for="type"class="mx-sm-1">Type</label></td>
-        <td><input type='text' class=''name='type'></div></td>
-        </tr>
-        <tr>
-        <td><div class="form-group"><label for="risk"class="mx-sm-1">Risk</label></td>
-        <td><input type='text' class=''name='risk'></div></td>
-        <td><div class="form-group"><label for="cost"class="mx-sm-1">Cost</label></td>
-        <td><input type='number' class=''name='cost'></div></td>
-        <td><div class="form-group"><label for="price"class="mx-sm-1">Price</label></td>
-        <td><input type='number' class=''name='price'></div></td>
-        <td><div class="form-group"><label for="revenue"class="mx-sm-1">Revenue</label></td>
-        <td><input type='text' class=''name='revenue'></div></td>{{!--autocalculate--}}
-        <td><div class="form-group"><label for="duration"class="mx-sm-1">Duration</label></td>
-        <td><input type='text' class=''name='duration'></div></td>
-    </tr>
+        <div class="form row col align-items-center">
+            <label for="title"class="col-sm-1">Title</label>
+            <input type='text' class='form-control-sm col-sm-3'name='title'required>
+            <label for="date"class="col-sm-1">Date</label>
+            <input type='date' class='form-control-sm col-sm-2'name='date'required>
+            <label for="type"class="col-sm-1">Type</label>
+            <input type='text' class='form-control-sm col-sm-2'name='type'required>
+            <label for="risk"class="col-sm-1">Risk</label>
+            <select class='form-control-sm col-sm-1'name='risk'required>
+                <option value='low'>Low</option>
+                <option value='medium'>Medium</option>
+                <option value='high'>High</option>
+            </select>
+            
+        </div>
+        <div class="form row col my-2">
+            <label for="durationD"class="col-sm-1">Time</label>
+            <div class="col-sm-5">
+                <input type='number' class='form-control-sm col-sm-3'name='durationD'>DD
+                <input type='number' class='form-control-sm col-sm-3 mx-1'name='durationH'required>HH
+                <input type='number' class='form-control-sm col-sm-3 mx-1'name='durationM'required>MM
+            </div>
+            <label for="cost"class="col-sm-1">Cost</label>
+            <input type='number' class='form-control-sm col-sm-1'name='cost'required>
+            <label for="price"class="col-sm-1">Charge</label>
+            <input type='number' class='form-control-sm col-sm-1'name='price'required>
+            <label for="revenue"class="col-sm-1">Profit</label>
+            <input type='text' class='form-control-sm col-sm-1'name='revenue'required>{{!--autocalculate--}}
+        </div>
+        <div class="form row col align-items-center">
+            <label for="transDescription"class="col-sm-2">Description</label>
+            <textarea class="form-control-sm col-sm-10"name="transDescription"></textarea>
+        </div>
+    </div>
+    
 </table>
-{{!-- @required this.risk,
-    @required this.title,
-    @required this.description,
-    @required this.date,
-    @required this.type,
-    @required this.clientId,
-    @required this.serviceId,
-    @required this.cost,
-    @required this.price,
-    @required this.revenue,
-    this.duration, --}}
