--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,6 @@
   <div name="View Clients">
     <a class="btn btn-secondary btn-block"href="/clients/viewClient">View Clients</a>
   </div>
-<<<<<<< HEAD
   <div name="Add Clients">
     <a class="btn btn-secondary btn-block"href="/clients/addClient">Add Clients</a>
   </div>
@@ -19,17 +18,9 @@
     <a class="btn btn-secondary btn-block"href="/clients/viewTransact">View Transactions</a>
   </div>
   <div name="Add Transactions">
-    <a class="btn btn-secondary btn-block"href="/clients/addTransact">Add Transactions</a>
-  </div>
-=======
-  <div name="two">
-    <button type="button" class="btn btn-secondary">Sgit lecond</button>
-  </div>
-  <div name="three">
-    <button type="button" class="btn btn-secondary">Third</button>
+    <a class="btn btn-secondary btn-block"href="/clients/viewClient">Add Transactions</a>
   </div>
   <p>Enter 'git log' in terminal to view every commit in the
     master branch
   </p>
->>>>>>> 5c41cd2b76db164c2b5c176127eb0393aa1b13c9
 </div>
