--- a/views/clients/addTransact.handlebars
+++ b/views/clients/addTransact.handlebars
@@ -1,7 +1,7 @@
 
     <div class='card card-body'>
         <h3 class="text-center">New Transaction Form</h3>
-        <form name="addTransaction"action="" method="post"class=""></form>
+        <form classname="addTransaction"action="" method="post"=""></form>
         <div class="form row col align-items-center">
             <label for="title"class="col-sm-1">Title</label>
             <input type='text' class='form-control-sm col-sm-3'name='title'required>
