--- a/views/clients/addClient.handlebars
+++ b/views/clients/addClient.handlebars
@@ -3,25 +3,11 @@
   <h3 class="text-center">New Client Application Form</h3>
    <form name="addClient" action="" method="post" class="form-inline">
     <div class="form-group row">
-      <label for="fName" class="mx-sm-1">First Name</label>
-      <input type="text" class="form-control col-sm-2 mx-sm-2" name="mName" size="10">
-      <label for="lName">Last Name</label>
-      <input type="text" class="form-control  col-sm-2 mx-sm-2" name="lName">
-      <label for="alias">Alias</label>
-      <input type="text" class="form-control  col-sm-2 mx-sm-2" name="alias">
-      =======
-      <form name="addClient" action='add_client.php' method="post" class="form-inline">
-        <div class="form row my-2">
-          <label for="fName" class="mx-sm-2 my-2">First Name</label>
-          <input type="text" class="form-control col-auto" name="fName" size="18" required>
-          <label for="mName" class="col-auto my-2">Middle Name</label>
-          <input type="text" class="form-control col-auto" name="mName" size="10">
-          <label for="lName" class="col-auto">Last Name</label>
-          <input type="text" class="form-control col-auto" name="lName" required>
-          <label for="alias" class="col-auto">Alias</label>
-          <input type="text" class="form-control col-auto" name="alias" size='13'>
-          >>>>>>> c8b7971068d4a76551c1d231bac0cd8caa63a253
-        </div>
+      <label for="fname" class="mx-sm-1">First Name</label>
+      <input type="text" class="form-control  col-sm-2 mx-sm-2" name="fname">
+      <label for="lname">Last Name</label>
+      <input type="text" class="form-control  col-sm-2 mx-sm-2" name="lname">
+      <form name="addClient" action='./clients/addClient' method="post" class="form-inline">
 
         <div class="form row my-2 align-items-center">
           <label for="age" class="mx-sm-2">Age</label>
@@ -31,13 +17,6 @@
           <label for="phoneNumber" class="col-auto">Phone Number</label>
           <input type="tel" class="form-control mx-sm-1" name="phoneNumber" maxlength="10" size="11"
             oninput="autotab(this, document.addClient.phoneNumber)" size="3">
-          <label for="ssid" class="col-auto">SSID</label>
-          <input type="text" class="form-control col-auto" name="ssid1" maxlength="3" minlength="3"
-            oninput="autotab(this, document.addClient.ssid1)" size="3">-
-          <input type="text" class="form-control col-auto" name="ssid2" maxlength="2" minlength="2"
-            oninput="autotab(this, document.addClient.ssid2)" size="2">-
-          <input type="text" class="form-control col-auto" name="ssid3" maxlength="4" minlength="4"
-            oninput="autotab(this, document.addClient.ssid3)" size="4">
         </div>
         <div class="form-group row my-2">
           <label for="address" class="mx-sm-2">Address</label>
@@ -119,106 +98,3 @@
       function autotab(current, to) { if (current.getAttribute && current.value.length == current.getAttribute("maxlength")) { to.focus() } }
     </script>
 
-    {{!-- <form>
-      <table>
-        <tr>
-          <th>New Client Application Form</th>
-        </tr>
-        <tr>
-          <td>First Name:</td>
-          <td><input type</td>
-        </tr>
-      </table>
-      <<<<<<< HEAD </form> --}}
-        =======
-    </form> 
-    {{!-- <h3>Enter the following information <br /> to create a new client</h3>
-
-    <table border=0>
-      <form action='add_client.php' method='post'>
-        <tr>
-          <th bgcolor="blue">First Name</th>
-          <td><input type='text' name='fname' /></td>
-        </tr>
-        <tr>
-          <th bgcolor="blue">Last Name</th>
-          <td><input type='text' name='lname' /></td>
-        </tr>
-        <tr>
-          <th bgcolor="blue">Phone</th>
-          <td><input type='text' name='phone' /></td>
-        </tr>
-        <th bgcolor="blue">City</th>
-        <td><input type='text' name='city' /></td>
-        </tr>
-        <th bgcolor="blue">State</th>
-        <td><select name="state">
-            <option value="AL">Alabama</option>
-            <option value="AK">Alaska</option>
-            <option value="AZ">Arizona</option>
-            <option value="AR">Arkansas</option>
-            <option value="CA">California</option>
-            <option value="CO">Colorado</option>
-            <option value="CT">Connecticut</option>
-            <option value="DE">Delaware</option>
-            <option value="DC">District Of Columbia</option>
-            <option value="FL">Florida</option>
-            <option value="GA">Georgia</option>
-            <option value="HI">Hawaii</option>
-            <option value="ID">Idaho</option>
-            <option value="IL">Illinois</option>
-            <option value="IN">Indiana</option>
-            <option value="IA">Iowa</option>
-            <option value="KS">Kansas</option>
-            <option value="KY">Kentucky</option>
-            <option value="LA">Louisiana</option>
-            <option value="ME">Maine</option>
-            <option value="MD">Maryland</option>
-            <option value="MA">Massachusetts</option>
-            <option value="MI">Michigan</option>
-            <option value="MN">Minnesota</option>
-            <option value="MS">Mississippi</option>
-            <option value="MO">Missouri</option>
-            <option value="MT">Montana</option>
-            <option value="NE">Nebraska</option>
-            <option value="NV">Nevada</option>
-            <option value="NH">New Hampshire</option>
-            <option value="NJ">New Jersey</option>
-            <option value="NM">New Mexico</option>
-            <option value="NY">New York</option>
-            <option value="NC">North Carolina</option>
-            <option value="ND">North Dakota</option>
-            <option value="OH">Ohio</option>
-            <option value="OK">Oklahoma</option>
-            <option value="OR">Oregon</option>
-            <option value="PA">Pennsylvania</option>
-            <option value="RI">Rhode Island</option>
-            <option value="SC">South Carolina</option>
-            <option value="SD">South Dakota</option>
-            <option value="TN">Tennessee</option>
-            <option value="TX">Texas</option>
-            <option value="UT">Utah</option>
-            <option value="VT">Vermont</option>
-            <option value="VA">Virginia</option>
-            <option value="WA">Washington</option>
-            <option value="WV">West Virginia</option>
-            <option value="WI">Wisconsin</option>
-            <option value="WY">Wyoming</option>
-          </select> </td>
-        </tr>
-        <th bgcolor="blue">Address</th>
-        <td><input type='text' name='address' /></td>
-        </tr>
-        <th bgcolor="blue">Email</th>
-        <td><input type='text' name='email' /></td>
-        </tr>
-        <th bgcolor="blue">Birthday</th>
-        <td><input type='text' name='bday' /></td>
-        </tr>
-        <th bgcolor="blue">Description</th>
-        <td><textarea name='desc'></textarea></td>
-        </tr>
-        <tr>
-          <td><input type='submit' value='Add Client' /></td>
-      </form>
-      </div> --
