--- a/views/clients/addClient.handlebars
+++ b/views/clients/addClient.handlebars
@@ -5,11 +5,9 @@
   <h3 class="text-center">New Client Application Form</h3>
   <form name="addClient"action='add_client.php'method="post"class="form-inline">
     <div class="form row my-2">
-      <label for="fName"class="mx-sm-2 my-2">First Name</label>
-      <input type="text"class="form-control col-auto"name="fName"size="18"required>
-      <label for="mName"class="col-auto my-2">Middle Name</label>
-      <input type="text"class="form-control col-auto"name="mName"size="10">
-      <label for="lName"class="col-auto">Last Name</label>
+      <label for="fname"class="mx-sm-2 my-2">First Name</label>
+      <input type="text"class="form-control col-auto"name="fname"size="18"required>
+      <label for="lname"class="col-auto">Last Name</label>
       <input type="text" class="form-control col-auto" name="lName"required>
       <label for="alias"class="col-auto">Alias</label>
       <input type="text"class="form-control col-auto"name="alias"size='13'>
@@ -99,8 +97,8 @@
       <input type="text"class="form-control  col-auto"name="work">
       <label for="timeInUSA"class="col-auto">Time In USA</label>
       <input type="number"class="form-control col-auto"name="timeInUSA"min='0'>     
-      <label for="clientDescription"class="col-auto">Description</label>
-      <textarea class="form-control col-auto"name="clientDescription"></textarea>
+      <label for="description"class="col-auto">Description</label>
+      <textarea class="form-control col-auto"name="description"></textarea>
     </div>
 
     </div>
