--- a/views/clients/viewClient.handlebars
+++ b/views/clients/viewClient.handlebars
@@ -1,2 +1,5 @@
 <p>Page under construction...</p>
 <p>View client page</p>
+<p>Page under construction...</p>
+<p>View client page</p>
+<p>DB Completion requred to create this page...</p>
