--- a/views/clients/addClient.handlebars
+++ b/views/clients/addClient.handlebars
@@ -1,100 +1,88 @@
- <div class="card card-body">
+<p>Page under construction...</p>
+<p>View client page</p>
 
-  <h3 class="text-center">New Client Application Form</h3>
-   <form name="addClient" action="" method="post" class="form-inline">
-    <div class="form-group row">
-      <label for="fname" class="mx-sm-1">First Name</label>
-      <input type="text" class="form-control  col-sm-2 mx-sm-2" name="fname">
-      <label for="lname">Last Name</label>
-      <input type="text" class="form-control  col-sm-2 mx-sm-2" name="lname">
-      <form name="addClient" action='./clients/addClient' method="post" class="form-inline">
+<div class="container-fluid bg-light py-3">
+  <div class="row">
+    <div class="col-md-6 mx-auto">
+      <div class="card card-body">
+        <h3 class="text-center mb-4">Add Client</h3>
 
-        <div class="form row my-2 align-items-center">
-          <label for="age" class="mx-sm-2">Age</label>
-          <input type="number" class="form-control col-auto" name="age" min="16" max="110">
-          <label for="dob" class="col-auto">Date of Birth</label>
-          <input type="date" class="form-control col-auto" name="dob">
-          <label for="phoneNumber" class="col-auto">Phone Number</label>
-          <input type="tel" class="form-control mx-sm-1" name="phoneNumber" maxlength="10" size="11"
-            oninput="autotab(this, document.addClient.phoneNumber)" size="3">
-        </div>
-        <div class="form-group row my-2">
-          <label for="address" class="mx-sm-2">Address</label>
-          <input type="text" class="form-control col-auto" name="address" size="36">
-          <label for="city" class="col-auto">City</label>
-          <input type="text" class="form-control col-auto" name="city">
-          <label for="state" class="col-auto">State</label>
-          <select class="form-control col-auto" name="state">
-            <option value="AL">Alabama</option>
-            <option value="AK">Alaska</option>
-            <option value="AZ">Arizona</option>
-            <option value="AR">Arkansas</option>
-            <option value="CA">California</option>
-            <option value="CO">Colorado</option>
-            <option value="CT">Connecticut</option>
-            <option value="DE">Delaware</option>
-            <option value="DC">District Of Columbia</option>
-            <option value="FL">Florida</option>
-            <option value="GA">Georgia</option>
-            <option value="HI">Hawaii</option>
-            <option value="ID">Idaho</option>
-            <option value="IL">Illinois</option>
-            <option value="IN">Indiana</option>
-            <option value="IA">Iowa</option>
-            <option value="KS">Kansas</option>
-            <option value="KY">Kentucky</option>
-            <option value="LA">Louisiana</option>
-            <option value="ME">Maine</option>
-            <option value="MD">Maryland</option>
-            <option value="MA">Massachusetts</option>
-            <option value="MI">Michigan</option>
-            <option value="MN">Minnesota</option>
-            <option value="MS">Mississippi</option>
-            <option value="MO">Missouri</option>
-            <option value="MT">Montana</option>
-            <option value="NE">Nebraska</option>
-            <option value="NV">Nevada</option>
-            <option value="NH">New Hampshire</option>
-            <option value="NJ">New Jersey</option>
-            <option value="NM">New Mexico</option>
-            <option value="NY">New York</option>
-            <option value="NC">North Carolina</option>
-            <option value="ND">North Dakota</option>
-            <option value="OH">Ohio</option>
-            <option value="OK">Oklahoma</option>
-            <option value="OR">Oregon</option>
-            <option value="PA">Pennsylvania</option>
-            <option value="RI">Rhode Island</option>
-            <option value="SC">South Carolina</option>
-            <option value="SD">South Dakota</option>
-            <option value="TN">Tennessee</option>
-            <option value="TX">Texas</option>
-            <option value="UT">Utah</option>
-            <option value="VT">Vermont</option>
-            <option value="VA">Virginia</option>
-            <option value="WA">Washington</option>
-            <option value="WV">West Virginia</option>
-            <option value="WI">Wisconsin</option>
-            <option value="WY">Wyoming</option>
-          </select>
-          <label for="zip" class="col-auto">Zip</label>
-          <input type="text" class="form-control col-auto" name="zip" maxlength="5" size="6"
-            oninput="autotab(this, document.addClient.zip)">
-        </div>
-        <div class="form row my-2 align-items-center">
-          <label for="work" class="mx-sm-2">Work</label>
-          <input type="text" class="form-control  col-auto" name="work">
-          <label for="timeInUSA" class="col-auto">Time In USA</label>
-          <input type="number" class="form-control col-auto" name="timeInUSA" min='0'>
-          <label for="clientDescription" class="col-auto">Description</label>
-          <textarea class="form-control col-auto" name="clientDescription"></textarea>
-        </div>
+        <fieldset>
+          <div class="form-goup">
+            <input class="form-control input-lg" placeholder="First Name" name="fname" type="text">
+          </div>
+          <div class="form-group">
+            <input class="form-control input-lg" placeholder="Last Name" name="fname" type="text">
+          </div>
+          <div class="form-group">
+            <input class="form-control input-lg" placeholder="City" name="city" type="text">
+          </div>
+          <div class="form-group">
+            <input class="form-control input-lg" placeholder="City" name="city" type="text">
+          </div>
+          <div class="form-group">
+            <input class="form-control input-lg" placeholder="Address" name="address" value="" type="text">
+          </div>
+          <div>
+            <label for="state" class="col-auto">State</label>
+            <select class="form-control col-auto" name="state">
+              <option value="AL">Alabama</option>
+              <option value="AK">Alaska</option>
+              <option value="AZ">Arizona</option>
+              <option value="AR">Arkansas</option>
+              <option value="CA">California</option>
+              <option value="CO">Colorado</option>
+              <option value="CT">Connecticut</option>
+              <option value="DE">Delaware</option>
+              <option value="DC">District Of Columbia</option>
+              <option value="FL">Florida</option>
+              <option value="GA">Georgia</option>
+              <option value="HI">Hawaii</option>
+              <option value="ID">Idaho</option>
+              <option value="IL">Illinois</option>
+              <option value="IN">Indiana</option>
+              <option value="IA">Iowa</option>
+              <option value="KS">Kansas</option>
+              <option value="KY">Kentucky</option>
+              <option value="LA">Louisiana</option>
+              <option value="ME">Maine</option>
+              <option value="MD">Maryland</option>
+              <option value="MA">Massachusetts</option>
+              <option value="MI">Michigan</option>
+              <option value="MN">Minnesota</option>
+              <option value="MS">Mississippi</option>
+              <option value="MO">Missouri</option>
+              <option value="MT">Montana</option>
+              <option value="NE">Nebraska</option>
+              <option value="NV">Nevada</option>
+              <option value="NH">New Hampshire</option>
+              <option value="NJ">New Jersey</option>
+              <option value="NM">New Mexico</option>
+              <option value="NY">New York</option>
+              <option value="NC">North Carolina</option>
+              <option value="ND">North Dakota</option>
+              <option value="OH">Ohio</option>
+              <option value="OK">Oklahoma</option>
+              <option value="OR">Oregon</option>
+              <option value="PA">Pennsylvania</option>
+              <option value="RI">Rhode Island</option>
+              <option value="SC">South Carolina</option>
+              <option value="SD">South Dakota</option>
+              <option value="TN">Tennessee</option>
+              <option value="TX">Texas</option>
+              <option value="UT">Utah</option>
+              <option value="VT">Vermont</option>
+              <option value="VA">Virginia</option>
+              <option value="WA">Washington</option>
+              <option value="WV">West Virginia</option>
+              <option value="WI">Wisconsin</option>
+              <option value="WY">Wyoming</option>
+            </select>
+          </div>
 
+          <input class="btn btn-lg btn-primary btn-block" value="Add New Client" type="submit">
+        </fieldset>
+      </div>
     </div>
-    <button type="submit" class="btn btn-primary btn-block">Submit New Client</button>
-    </form>
-    </div>
-    <script>
-      function autotab(current, to) { if (current.getAttribute && current.value.length == current.getAttribute("maxlength")) { to.focus() } }
-    </script>
-
+  </div>
+</div>
