--- a/views/clients/viewClient.handlebars
+++ b/views/clients/viewClient.handlebars
@@ -2,25 +2,46 @@
 <table class="table">
   <thead>
     <tr>
+      <th scope="col">Search Client Database</th>
+      <th scope="col"colspan="4"><input type="text"id="searchbar"placeholder="Search by first or last name"
+        class="form-control"onkeyup="search()" ></th>
+    </tr>
+    <tr>
       <th scope="col">First Name</th>
       <th scope="col">Last Name</th>
       <th scope="col">Phone Number</th>
-      <th scope="col">Options</th>
+      <th scope="col"colspan='2'><center>Options</center></th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>{{fname}}</td>
-      <td>{{lname}}</td>
-      <td>{{phoneNumber}}</td>
+      <td><input type="text"value={{fname}} class="form-control"name="fname"readonly></td>
+      <td><input type="text"value={{lname}} class="form-control"name="lname"readonly></td>
+      <td><input type="text"value={{lname}} class="form-control"name="phoneNumber"readonly></td>
       <td>
         <form method="post" action="/clients/addTransact/{{phoneNumber}}">
           <input name='id' type='submit' value="Add Transaction" class='btn btn-secondary' />
         </form>
       </td>
+      <td>
+        <form method="post" action="">
+          <input name='id' type='submit' value="Delete Client" class='btn btn-danger' />
+        </form>
+      </td>
+      
     </tr>
   </tbody>
 </table>
 {{else}}
 <h1>No Clients in Database</h1>
 {{/each}}
+<script>
+  function search(){
+    var input=document.getElementById('searchbar').value.toLowerCase();
+    for(int i=0;i<clients:i++){
+      if({{fname}}==input){
+        
+      }
+    }
+  }
+</script>
