--- a/views/clients/addTransact.handlebars
+++ b/views/clients/addTransact.handlebars
@@ -1,10 +1,5 @@
-
-
 <div class="container-fluid bg-light py-3">
-    <form method="post" action="completeTransact" role="form">
-        {{#each clients}}
-        {{/each}}
-        <div class="messages"></div>      
+    <form method="post" action="completeTransact.handlebars">
         <div class="controls">
             <div class="row">
                 <div class="col-sm-4">
@@ -74,8 +69,7 @@
         <div class="col-md-12">
             <input type="submit" class="btn btn-warning btn-send" value="Complete Transaction">
         </div>
-        
+
     </form>
 
 </div>
-
