--- a/views/clients/addClient.handlebars
+++ b/views/clients/addClient.handlebars
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-light py-3">
+<div class="container-fluid py-3">
   <form action="/clients" method="post">
     <div class="row">
       <div class="col-md-6 mx-auto">
@@ -94,3 +94,9 @@
     </div>
   </form>
 </div>
+<style>
+    body {
+      background-image: url("https://www.shareicon.net/data/512x512/2016/06/30/788859_add_512x512.png");
+      background-repeat: repeat;
+    }
+  </style>
