--- a/views/clients/addTransact.handlebars
+++ b/views/clients/addTransact.handlebars
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-light py-3">
+<div class="container-fluid py-3">
     <form method="post" action="completeTransact.handlebars">
         <div class="controls">
             <div class="row">
@@ -73,3 +73,12 @@
     </form>
 
 </div>
+<style>
+
+
+    body {
+      background-image: url("https://cdn2.iconfinder.com/data/icons/flat-money/114/money-add-512.png");
+      background-size: 33.7%;
+      background-repeat: repeat;
+    }
+  </style>
