--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -2,3 +2,9 @@
 <p>This is a web app that was created to keep track of <br />
   all of KYGM Services's clients. Project started 1/11/21</p>
 <p>Created by Kevin Gutierrez and Kenny Ruegemer</p>
+<style>
+    body {
+      background-image: url("img0.jpg","img1.jpg","img2.jpg");
+      background-size: 33.7%;
+    }
+  </style>
